home page, about page, signin page

--- a/code/impl/web/default.html
+++ b/code/impl/web/default.html
@@ -29,14 +29,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="#">Mentor Web</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
+              <li><a href="about.html">About</a></li>
               <li><a href="#contact">Contact</a></li>
+              <li><a href="#contact">FAQ</a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Action</a></li>
                   <li><a href="#">Another action</a></li>
@@ -51,17 +52,21 @@
             <form class="navbar-form pull-right">
               <input class="span2" type="text" placeholder="Email">
               <input class="span2" type="password" placeholder="Password">
+              <div class="btn-group">
               <button type="submit" class="btn">Sign in</button>
+              <button type="submit" class="btn">Register</button>
+              </div>
             </form>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
+
 <div class="container">
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>Something Here!</h1>
+        <h1>Start Your Future Today!</h1>
         <p>Something else here and here about mentor web derp. </p>
         <p><a href="about.html" class="btn btn-primary btn-large">Learn more »</a></p>
       </div>
