--- a/code/impl/web/template.html
+++ b/code/impl/web/template.html
@@ -17,6 +17,6 @@
 
 <body>
 
-<script src="http://code.jequry.com/jquery-latest.js"></script>
+<script src="http://code.jquery.com/jquery-latest.js"></script>
 </body>
 </html>
