--- a/code/impl/web/signin.html
+++ b/code/impl/web/signin.html
@@ -1,77 +1,81 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
+<html lang="en"><head>
+    <meta charset="utf-8">
+    <title>Sign in · Twitter Bootstrap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/menu-style.css" rel="stylesheet" type="text/css">
-    <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
-    <!-- HTML5 shim for IE backwards compatibility -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="js/bootstrap.min.js"></script>
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
-body {
-	padding-top: 40px;
-	padding-bottom: 40px;
-	background-color: #f5f5f5;
-}
-.form-signin {
-	padding: 19px 29px 29px;
-	margin: 0 auto 20px;
-	background-color: #fff;
-	border: 1px solid #e5e5e5;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-	box-shadow: 0 1px 2px rgba(0,0,0,.05);
-}
-.form-signin .form-signin-heading,  .form-signin .checkbox {
-	margin-bottom: 10px;
-}
-.form-signin input[type="text"],  .form-signin input[type="password"] {
-	font-size: 16px;
-	height: auto;
-	margin-bottom: 15px;
-	padding: 7px 9px;
-}
-.container{
-	width:1024px;
-}
-</style>
-    <title>SIgn In</title>
-    </head>
+      body {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background-color: #f5f5f5;
+      }
 
-    <body style="zoom: 1;" cz-shortcut-listen="true">
-         <div class="container"> <div class="row">
+      .form-signin {
+        padding: 19px 29px 29px;
+        margin: 0 auto 20px;
+        background-color: #fff;
+        border: 1px solid #e5e5e5;
+        -webkit-border-radius: 5px;
+           -moz-border-radius: 5px;
+                border-radius: 5px;
+        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+                box-shadow: 0 1px 2px rgba(0,0,0,.05);
+      }
+      .form-signin .form-signin-heading,
+      .form-signin .checkbox {
+        margin-bottom: 10px;
+      }
+      .form-signin input[type="text"],
+      .form-signin input[type="password"] {
+        font-size: 16px;
+        height: auto;
+        margin-bottom: 15px;
+        padding: 7px 9px;
+      }
+      .container{
+        width: 1024px;
+      }
 
-        <div class="span5">
-          <form class="form-signin">
-            <h2 class="form-signin-heading">Please sign in</h2>
-            <input type="text" class="input-block-level" placeholder="Email address">
-            <input type="password" class="input-block-level" placeholder="Password">
-            <label class="checkbox">
-              <input type="checkbox" value="remember-me">
-              Remember me <small class="pull-right"><a href="#">Forgot your password?</a></small> <br /></label>
-              
-            <button class="btn btn-large btn-primary" type="submit">Sign in</button>
-            <button class="btn btn-large btn-info pull-right">Login with LinkedIn!</button>
-          </form>
-        </div>
-        <div class="span1" />
-        <div class="span4">
-          <form class="form-signin form-register">
-            <h2 class="form-signin-heading">Register... It's free!</h2>
-            <input type="text" class="input-block-level" placeholder="Email address">
-            <input type="password" class="input-block-level" placeholder="Password">
-<input type="password" class="input-block-level" placeholder="Confirm Password">
-            <button class="btn btn-large btn-primary" type="submit">Submit</button>
-          </form>
-        </div>
-      </div>
+    </style>
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="../assets/js/html5shiv.js"></script>
+    <![endif]-->
+<body style="zoom: 1;" cz-shortcut-listen="true">
+
+    <div class="container">
+<div class="row">
+  <div class="span6">
+      <form class="form-signin">
+        <h2 class="form-signin-heading">Please sign in</h2>
+        <input type="text" class="input-block-level" placeholder="Email address">
+        <input type="password" class="input-block-level" placeholder="Password">
+        <label class="checkbox">
+          <input type="checkbox" value="remember-me"> Remember me <small class="pull-right"><a href="#">Forgot your password?</a></small>
+        </label>
+        <a href="dashboard.html" class="btn btn-large btn-primary" type="submit">Sign in</a>
+        <a href="#" class="btn btn-large btn-info pull-right">Login with LinkedIn!</a>
+      </form>
+</div><div class="span1" />
+
+<div class="span5">
+      <form class="form-signin form-register">
+        <h2 class="form-signin-heading">Register... It's Free!</h2>
+        <input type="text" class="input-block-level" placeholder="Email address">
+        <input type="password" class="input-block-level" placeholder="Password">
+        <input type="password" class="input-block-level" placeholder="Confirm Password">
+       
+        <button class="btn btn-large btn-primary" type="submit">Submit</button>
+
+      </form>
+</div></div>
+</div>
     </div>
 </html>
