update so frkn danny can see it

--- a/code/impl/web/default.html
+++ b/code/impl/web/default.html
@@ -66,8 +66,8 @@
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
-        <h1>Start Your Future Today!</h1>
-        <p>Something else here and here about mentor web derp. </p>
+        <h1>Progress Your Future Today!</h1>
+        <p>Student mentor wants to you to become what you've always </p>
         <p><a href="about.html" class="btn btn-primary btn-large">Learn more »</a></p>
       </div>
 
@@ -80,14 +80,14 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="span6">
-          <h2>Our Student Video Blog Series</h2>
-          <img src="http://placehold.it/425x225" alt="Video" />
+          <h2>Professionals with success</h2>
+          <img src="http://www.wilmu.edu/ssc/images/ssc_main2.jpg" alt="Video" />
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn" href="#">View details »</a></p>
         </div>
         <div class="span6">
-          <h2>Become a Mentor</h2>
-          <h3>Serve as a role model to a college student</h3>
+          <h2>Get help or give help!</h2>
+          <h3>Help students achieve their goals, or get help achieving your goals</h3>
           <ul>
             <li>Share your valuable knowledge and experience</li>
             <li>Improve your coaching, communication, and leadership skills</li>
