--- a/code/impl/web/about.html
+++ b/code/impl/web/about.html
@@ -65,8 +65,8 @@ body {
   </div>
   <hr>
   <div class="jumbotron">
-    <h1>Something Super Awesome Here!</h1>
-    <p class="lead">Super awesome description here. Maybe something about like um you know the benfitis of mentor web n stuff.</p>
+    <h1>A Virtual Mentoring Environment</h1>
+    <p class="lead">No more hassle of asking strangers for help. Your friends are too bust to help you. Let Mentor Web find the perfect mentor for you!</p>
     <div class="btn-group">
       <button class="btn btn-success">Sign up today</button>
       <button class="btn-large btn btn-success dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
